# kanji

./: .gitignore  .prettierrc.json  Cargo.toml  README.md  clippy.toml  diesel.toml  dprint.json  eslint.config.js  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.js  vite.config.ts
.cargo/: config.toml
.github/workflows/: deploy.yml  publish.yml  release.yml
migrations/2025-09-01-155136_create_kanji/: up.sql
migrations/2025-09-01-161021_create_source/: down.sql  up.sql
migrations/2025-09-01-230801_create_quiz_answer/: down.sql  up.sql
migrations/2025-09-05-190323_alter_source_add_enabled/: down.sql  up.sql
migrations/2025-09-06-211421_alter_source_add_weight/: down.sql  up.sql
migrations/2025-09-07-155726_alter_quiz_answer_drop_duration/: down.sql  up.sql
migrations/2025-10-05-214733-0000_create_bookmark/: down.sql  up.sql
migrations/2025-10-06-015855-0000_clear_history/: up.sql
migrations/2025-10-11-191810-0000_alter_quiz_answer_add_source_id/: down.sql  up.sql
migrations/2025-11-15-204054-0000_create_source_group/: down.sql  up.sql
migrations/2025-11-15-204608-0000_create_source_group_source/: down.sql  up.sql
migrations/2025-11-18-134606-0000_create_quiz_chunk_history/: down.sql  up.sql
scripts/: build.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  command.rs  error.rs  http.rs  kanji.rs  lib.rs  main.rs  manager.rs  plugin.rs  quiz.rs  set.rs  settings.rs  snippet.rs  tray.rs  util.rs  window.rs
src-tauri/src/command/: bookmark.rs  kanji.rs  mod.rs  quiz.rs  source.rs  source_group.rs
src-tauri/src/core/: kanji.rs  mod.rs  set.rs  snippet.rs  source.rs
src-tauri/src/core/quiz/: chunk.rs  html.rs  mod.rs
src-tauri/src/database/: backup.rs  migration.rs  mod.rs  schema.rs
src-tauri/src/database/impl/: bookmark.rs  kanji.rs  mod.rs  quiz.rs  source.rs  source_group.rs
src-tauri/src/database/model/: bookmark.rs  kanji.rs  mod.rs  quiz_answer.rs  quiz_chunk_history.rs  source.rs  source_group.rs
src-tauri/src/database/sql_types/: id.rs  kanji_char.rs  mod.rs  path.rs  quiz_answer_id.rs  source_id.rs  source_weight.rs  uuid.rs  version.rs  zoned.rs
src-tauri/src/quiz/: chunk.rs  html.rs  mod.rs  source_stats.rs
src-tauri/src/server/: mod.rs  model.rs  response.rs  router.rs
src-tauri/src/window/: desktop.rs  mod.rs
src/api/: bindings.ts  http.ts  index.ts
src/assets/: base.css  index.css  style.css
src/assets/style/: base.css  main.css  vars.css
src/commands/: index.ts
src/components/: Bookmark.vue  DialogSourceGroups.vue  DialogSources.vue  DropdownMenuButton.vue  History.vue  Search.vue  Sidebar.vue
src/composables/: bookmarks.ts  frequency.ts  kanji.ts  quiz-chunk-history.ts  quiz.ts  ranking.ts  snippets.ts  source.ts  sources.ts  useBookmarks.ts  useKanjis.ts  useQuiz.ts  useQuizChunkHistory.ts  useRanking.ts  useSnippets.ts  useSourceGroups.ts  useSources.ts
src/lib/: date.ts  error.ts  intl.ts  local-storage.ts  prototype.ts  string.ts  updater.ts
src/lib/api/: http.ts  index.ts
src/router/: index.ts
src/stores/: frequency.ts  kanji.ts  settings.ts
src/types/: bookmark.d.ts  global.d.ts  index.d.ts  kanji.d.ts  quiz.d.ts  route.d.ts  set.d.ts  settings.d.ts  snippet.d.ts  source-group.d.ts  source.d.ts
src/views/bookmarks/: index.vue
src/views/home/: index.vue
src/views/quiz/: Question.vue  Set.vue  index.vue
src/views/quiz/history/: index.vue
src/views/quiz/root/: Chunks.vue  DialogNew.vue  DialogSource.vue  DialogTextChunk.vue  DialogUrl.vue  LastChunk.vue  Question.vue  Set.vue  index.vue  types.ts
src/views/quiz/stats/: index.vue
src/views/settings/: Desktop.vue  Mobile.vue  Tauri.vue  Web.vue  index.vue
src/views/snippets/: index.vue
src/views/source-groups/: DialogCreate.vue  index.vue
src/views/sources/: index.vue
