[workspace]
resolver = "3"
members = ["src-tauri"]

[workspace.package]
edition = "2024"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0"
bon = "3.9"
futures = "0.3"
globset = "0.4"
ignore = "0.4"
itertools = "0.14"
local-ip-address = "=0.6.10"
memchr = "2.8"
rand = "0.10"
scraper = "0.26"
serde_json = "1.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2.8"
tauri-plugin-persisted-scope = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2.4"
tauri-plugin-updater = "2.10"

[workspace.dependencies.axum]
version = "0.8"
features = ["macros"]

[workspace.dependencies.derive_more]
version = "2.1"
features = ["deref", "display", "from", "into"]

[workspace.dependencies.diesel]
version = "2.3"
default-features = false
features = ["returning_clauses_for_sqlite_3_35", "sqlite"]

[workspace.dependencies.diesel_migrations]
version = "2.3"
features = ["sqlite"]

[workspace.dependencies.jiff]
version = "0.2"
features = ["serde"]

[workspace.dependencies.libsqlite3-sys]
version = "0.36"
features = ["bundled"]

[workspace.dependencies.log]
version = "0.4"
features = ["release_max_level_off"]

[workspace.dependencies.mimalloc]
version = "0.1"
features = ["v3"]

[workspace.dependencies.reqwest]
version = "0.13"
features = ["rustls"]

[workspace.dependencies.semver]
version = "1.0"
features = ["serde"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.strum]
version = "0.28"
features = ["derive"]

[workspace.dependencies.tauri-plugin-pinia]
version = "4.2"
features = ["marshaler-toml", "preserve-order"]

[workspace.dependencies.tauri-plugin-prevent-default]
version = "4.0"
features = ["platform-windows"]

[workspace.dependencies.tokio]
version = "1.50"
features = ["full"]

[workspace.dependencies.tower]
version = "0.5"
features = []

[workspace.dependencies.tower-http]
version = "0.6"
features = ["cors"]

[workspace.dependencies.url]
version = "2.5"
features = ["serde"]

[workspace.dependencies.uuid]
version = "1.22"
features = ["serde", "v7"]

[workspace.dependencies.windows]
version = "0.62"
features = ["Win32_System_Threading"]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
panic = "abort"

[profile.preview]
inherits = "release"
codegen-units = 16
lto = "off"
opt-level = 0
debug = true
debug-assertions = true

[workspace.lints.rust]
async_fn_in_trait = "allow"
dangling_pointers_from_temporaries = "deny"
unfulfilled_lint_expectations = "deny"
unsafe_op_in_unsafe_fn = "deny"
variant_size_differences = "warn"

[workspace.lints.clippy]
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
enum_glob_use = "allow"
get_unwrap = "deny"
large_enum_variant = "deny"
map_unwrap_or = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_borrow = "deny"
needless_for_each = "allow"
obfuscated_if_else = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_else = "allow"
rest_pat_in_fully_bound_structs = "deny"
similar_names = "allow"
struct_field_names = "allow"
unnecessary_safety_comment = "deny"
unsafe_derive_deserialize = "allow"
useless_conversion = "deny"

[workspace.lints.clippy.pedantic]
level = "deny"
priority = -1
