[package]
name = "kanji"
version = "7.2.2"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lib]
name = "kanji_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
bon = "3"
futures = "0.3"
globset = "0.4"
itertools = "0.14"
local-ip-address = "=0.6.5"
memchr = "2"
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-process = "2"
walkdir = "2.5"

[dependencies.derive_more]
version = "2.0"
features = ["deref", "display"]

[dependencies.diesel]
version = "2.3"
default-features = false
features = ["returning_clauses_for_sqlite_3_35", "sqlite"]

[dependencies.diesel_migrations]
version = "2.3"
features = ["sqlite"]

[dependencies.jiff]
version = "0.2"
features = ["serde"]

[dependencies.libsqlite3-sys]
version = "0.35"
features = ["bundled"]

[dependencies.log]
version = "0.4"
features = ["release_max_level_off"]

[dependencies.rand]
version = "0.9"
features = ["nightly", "simd_support"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tauri]
version = "2.9"
features = ["image-png", "protocol-asset", "rustls-tls", "tray-icon"]

[dependencies.tauri-plugin-pinia]
git = "https://github.com/ferreira-tb/tauri-store"
branch = "main"
features = ["marshaler-toml"]

[dependencies.tokio]
version = "1.48"
features = ["full"]

[dependencies.uuid]
version = "1.18"
features = ["serde", "v7"]

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target.'cfg(not(target_os = "android"))'.dependencies.axum]
version = "0.8"
features = ["macros"]

[target.'cfg(not(target_os = "android"))'.dependencies.tauri-plugin-prevent-default]
git = "https://github.com/ferreira-tb/tauri-plugin-prevent-default"
branch = "main"
features = ["platform-windows"]

[target.'cfg(not(target_os = "android"))'.dependencies.tower]
version = "0.5"
features = []

[target.'cfg(not(target_os = "android"))'.dependencies.tower-http]
version = "0.6"
features = ["cors"]

[target.'cfg(not(target_os = "android"))'.dependencies.windows]
version = "0.62"
features = ["Win32_System_Threading"]

[build-dependencies.tauri-build]
version = "2.5"
features = []
