[package]
name = "kanji"
version = "8.0.3"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lib]
name = "kanji_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
bon = "3.9"
futures = "0.3"
globset = "0.4"
itertools = "0.14"
local-ip-address = "=0.6.10"
memchr = "2.8"
rand = "0.10"
serde_json = "1.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-process = "2"
walkdir = "2.5"

[dependencies.derive_more]
version = "2.1"
features = ["deref", "display", "from", "into"]

[dependencies.diesel]
version = "2.3"
default-features = false
features = ["returning_clauses_for_sqlite_3_35", "sqlite"]

[dependencies.diesel_migrations]
version = "2.3"
features = ["sqlite"]

[dependencies.jiff]
version = "0.2"
features = ["serde"]

[dependencies.libsqlite3-sys]
version = "0.35"
features = ["bundled"]

[dependencies.semver]
version = "1.0"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.strum]
version = "0.28"
features = ["derive"]

[dependencies.tauri]
version = "2.10"
features = ["image-png", "protocol-asset", "rustls-tls", "tray-icon"]

[dependencies.tauri-plugin-pinia]
version = "4.2"
features = ["marshaler-toml", "preserve-order"]

[dependencies.tokio]
version = "1.49"
features = ["full"]

[dependencies.url]
version = "2.5"
features = ["serde"]

[dependencies.uuid]
version = "1.21"
features = ["serde", "v7"]

[target.'cfg(not(target_os = "android"))'.dependencies]
scraper = "0.25"
tauri-plugin-log = "2.8"
tauri-plugin-single-instance = "2.4"
tauri-plugin-updater = "2.10"

[target.'cfg(not(target_os = "android"))'.dependencies.axum]
version = "0.8"
features = ["macros"]

[target.'cfg(not(target_os = "android"))'.dependencies.log]
version = "0.4"
features = ["release_max_level_off"]

[target.'cfg(not(target_os = "android"))'.dependencies.reqwest]
version = "0.13"
features = ["rustls"]

[target.'cfg(not(target_os = "android"))'.dependencies.tauri-plugin-prevent-default]
version = "4.0"
features = ["platform-windows"]

[target.'cfg(not(target_os = "android"))'.dependencies.tower]
version = "0.5"
features = []

[target.'cfg(not(target_os = "android"))'.dependencies.tower-http]
version = "0.6"
features = ["cors"]

[target."cfg(windows)".dependencies.windows]
version = "0.62"
features = ["Win32_System_Threading"]

[build-dependencies.tauri-build]
version = "2.5"
features = []
