[package]
name = "kanji"
version = "9.0.0"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lib]
name = "kanji_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
derive_more.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
futures.workspace = true
globset.workspace = true
itertools.workspace = true
local-ip-address.workspace = true
jiff.workspace = true
libsqlite3-sys.workspace = true
memchr.workspace = true
rand.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tap.workspace = true
tauri-plugin-clipboard-manager.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-http.workspace = true
tauri-plugin-persisted-scope.workspace = true
tauri-plugin-pinia.workspace = true
tauri-plugin-process.workspace = true
tokio.workspace = true
uuid.workspace = true
url.workspace = true
walkdir.workspace = true

[dependencies.tauri]
version = "2.10"
features = ["image-png", "protocol-asset", "rustls-tls", "tray-icon"]

[target.'cfg(not(target_os = "android"))'.dependencies]
axum.workspace = true
log.workspace = true
mimalloc.workspace = true
reqwest.workspace = true
scraper.workspace = true
tauri-plugin-log.workspace = true
tauri-plugin-prevent-default.workspace = true
tauri-plugin-single-instance.workspace = true
tauri-plugin-updater.workspace = true
tower.workspace = true
tower-http.workspace = true

[target."cfg(windows)".dependencies]
windows.workspace = true

[build-dependencies.tauri-build]
version = "2.5"
features = []
